--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.1",
     "@astrojs/check": "^0.9.3",
+    "astro": "^4.15.1",
+    "rss-parser": "^3.13.0",
     "typescript": "^5.5.4"
   }
 }
