--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "no-unread-count-rss-reader",
+  "name": "no-unread-count-rss",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
